# vn-yhct-rag

./: Makefile  README.md
rag-yhct/: .gitignore  Dockerfile  README.md  STEP6_IMPROVEMENTS.md  VECTOR_QUALITY.md  app.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
rag-yhct/config/: config.yaml
rag-yhct/data/: eval_questions_master.csv  evalset_summary.json  gate_predictions.csv  retrieval_predictions.json  sources.yaml  sources_full-0.yaml  sources_full.yaml
rag-yhct/data/reports/: failed_embed-0.jsonl  failed_embed.jsonl  h1_full_report-0.json  h1_full_report.json  h1_step6_eval_snapshot.json  h1_vector_quality_report-0.json  h1_vector_quality_report.json  mined_lexicon_candidates.tsv  mined_lexicon_curated.tsv  mined_lexicon_final_preview.tsv  retrieval_ablation.json  retrieval_ablation_fallback.json  retrieval_ablation_qset_100_seed42.json  vector_quality-0.json
rag-yhct/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
rag-yhct/frontend/app/: globals.css  layout.tsx  page.tsx
rag-yhct/frontend/lib/: api.ts
rag-yhct/frontend/types/: rag.ts
rag-yhct/notebooks/: answerability_gate_analysis.csv  check-0.ipynb  check-step6.ipynb  check_index.ipynb  evaluate_rag_tables.ipynb  gate_predictions.csv  retrieval_predictions.json  test_questions.csv  thesis_analysis_and_diagrams.ipynb  thesis_diagrams.ipynb  thesis_evaluation.ipynb
rag-yhct/scripts/: convert_to_txt.py  normalize_txt.py
rag-yhct/tests/: check-0.ipynb  check-step6.ipynb  check.ipynb  test_clean_v2.py  test_hybrid_query_preparation.py
(+419 files in other folders)
