[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-yhct"
version = "0.1.0"
description = "RAG pipeline for Vietnamese Traditional Medicine (Y Học Cổ Truyền)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pymupdf>=1.23.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "regex>=2023.0",
    "tiktoken>=0.5",
    "qdrant-client>=1.7",
    "unstructured[pdf,docx,image]>=0.16",
    "python-docx>=1.0",
    "pillow>=10.0",
    "pytesseract>=0.3.10",
    "langdetect>=1.0.9",
    "numba>=0.58",
    "llvmlite>=0.41",
    "requests>=2.31",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]
